--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,13 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Build Docker Image
+  displayName: Build and Run Docker Image
   jobs:
   - job: Build
     displayName: Build
     steps:
+
+    # Step 1: Build the Docker image
     - task: Docker@2
       displayName: Build Docker Image
       inputs:
@@ -28,10 +30,12 @@ stages:
           $(imageName):$(tag)
           $(imageName):latest
 
-    - task: Docker@2
+    # Step 2: Stop/remove any existing container and run a new one
+    - script: |
+        echo "Stopping old container if exists..."
+        docker stop bank-ner-container || true
+        docker rm bank-ner-container || true
+
+        echo "Running new container..."
+        docker run -d --name bank-ner-container -p 8000:8000 $(imageName):latest
       displayName: Run Docker Container
-      inputs:
-        command: run
-        containerName: 'bank-ner-container'
-        imageName: '$(imageName):latest'
-        ports: '8000:8000'  # change if your app uses a different port
