--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,40 +1,72 @@
 # Azure DevOps pipeline for building and running a Python Docker app on self-hosted agent
 
 trigger:
-- main  # change to your branch if needed
+- main
 
 pool:
-  name: Default          # the agent pool where your Linux VM agent is registered
+  name: Default
   demands:
     - agent.os -equals Linux
 
 variables:
-  imageName: 'bank-ner-app'       # name of the Docker image
-  tag: 'latest'                   # Use latest, or $(Build.BuildId) for unique builds
+  imageName: 'bank-ner-app'
+  tag: 'latest'
 
 stages:
-- stage: Build
-  displayName: Build and Run Docker Image
+- stage: BuildAndRun
+  displayName: Build and Run Docker
   jobs:
-  - job: Build
-    displayName: Build
+  - job: BuildDocker
+    displayName: Build and Run Docker Container
     steps:
 
-    # Step 1: Build the Docker image
-    - task: Docker@2
-      displayName: Build Docker Image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(imageName):$(tag)
+      - task: Docker@2
+        displayName: Build and Run Docker Container
+        inputs:
+          command: 'buildAndRun'
+          dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+          imageName: '$(imageName):$(tag)'
+          containerName: 'bank-ner-container'
+          ports: '8000:8000'
+          removePreviousContainer: true
 
-    # Step 2: Stop/remove any existing container and run a new one
-    - script: |
-        echo "Stopping old container if exists..."
-        docker stop bank-ner-container || true
-        docker rm bank-ner-container || true
+# # Azure DevOps pipeline for building and running a Python Docker app on self-hosted agent
 
-        echo "Running new container..."
-        docker run -d --name bank-ner-container -p 8000:8000 $(imageName):$(tag)
-      displayName: Run Docker Container
+# trigger:
+# - main  # change to your branch if needed
+
+# pool:
+#   name: Default          # the agent pool where your Linux VM agent is registered
+#   demands:
+#     - agent.os -equals Linux
+
+# variables:
+#   imageName: 'bank-ner-app'       # name of the Docker image
+#   tag: 'latest'                   # Use latest, or $(Build.BuildId) for unique builds
+
+# stages:
+# - stage: Build
+#   displayName: Build and Run Docker Image
+#   jobs:
+#   - job: Build
+#     displayName: Build
+#     steps:
+
+#     # Step 1: Build the Docker image
+#     - task: Docker@2
+#       displayName: Build Docker Image
+#       inputs:
+#         command: build
+#         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+#         tags: |
+#           $(imageName):$(tag)
+
+#     # Step 2: Stop/remove any existing container and run a new one
+#     - script: |
+#         echo "Stopping old container if exists..."
+#         docker stop bank-ner-container || true
+#         docker rm bank-ner-container || true
+
+#         echo "Running new container..."
+#         docker run -d --name bank-ner-container -p 8000:8000 $(imageName):$(tag)
+#       displayName: Run Docker Container
