--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
         inputs:
           command: build
           dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-          imageName: '$(imageName):$(tag)'
+          imageName: 'bank-ner-app:latest'
 
       # Step 2: Run container from the image
       - script: |
